fixed spacing again for #22

--- a/css/intro.less
+++ b/css/intro.less
@@ -138,6 +138,7 @@ figcaption{
 		padding-right: 2%;
 		h4{
 			border-bottom: 2px solid #dadada;
+			margin-bottom: 10px;
 		}
 		&.fancy{
 			width: 50%;
